# InsigProject

./: README.md  pyproject.toml  report.md
analysis/: Insig AI_decision_report.md  Insig AI_exit_strategy_liquidation_analysis.md  Insig AI_financial_due_diligence.md  Insig AI_industry_competitive_analysis.md  Insig AI_investment_thesis.md  Insig AI_management_governance_analysis.md  Insig AI_risk_assessment.md
analysisRunOne/: Insig ai_decision_report.md  Insig ai_exit_strategy_liquidation_analysis.md  Insig ai_financial_due_diligence.md  Insig ai_industry_competitive_analysis.md  Insig ai_investment_thesis.md  Insig ai_management_governance_analysis.md  Insig ai_risk_assessment.md
research/: Insig AI_financial_data_collection.md  Insig AI_industry_competitive_analysis.md  Insig AI_liquidity_risk_assessment.md  Insig AI_management_governance_analysis.md  Insig AI_report.md
researchRunOne/: Insig ai_financial_data_collection.md  Insig ai_industry_competitive_analysis.md  Insig ai_liquidity_risk_assessment.md  Insig ai_management_governance_analysis.md  Insig ai_report.md
src/testing/: crew.py  main.py
src/testing/config/: agents.yaml  tasks.yaml
src/waiting/: crew.py  main.py
src/waiting/config/: agents.yaml  tasks.yaml
src/waiting/tools/: excel_reader_tool.py
