[project]
name = "testing"
version = "0.1.0"
description = "testing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
testing = "testing.main:run"
run_crew = "testing.main:run"
train = "testing.main:train"
replay = "testing.main:replay"
test = "testing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
